--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Green Wedding</title>
+    <meta name="description" content="Kendall Butler and Bart Lissner wedding in Dublin, Ireland. Decmeber 21st 2017">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
