added playlist and redirect

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Green Wedding</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Kendall Butler and Bart Lissner wedding in Dublin, Ireland. Decmeber 21st 2017">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
